# my_fastapi

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
routers/: products.py  users.py
static/json/: prueba.json
